--- a/sub1.html
+++ b/sub1.html
@@ -573,7 +573,7 @@ margin-left: 80%;
         <div class="mc">
 		 <div class="line22"></div>
         <h2><span class="txt-LH">일진 MATERIALS의<br>첨단소재 기술에는</span><br>미래를 향한 꿈이 담겨 있습니다.</h2>
-        <p>Eecfoil 전문기업에서 첨단소재 기업으로 새로운 도약을 시작합니다.</p>
+        <p>Elecfoil 전문기업에서 첨단소재 기업으로 새로운 도약을 시작합니다.</p>
 		</div>       
       </div>
     </div> 
